Switched from Ryan to Rishi MongoDB

--- a/clusters.ipynb
+++ b/clusters.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "df = pd.read_csv(\"arxiv_100k.csv\")\n",
     "\n",
-    "myclient = pymongo.MongoClient(\"mongodb+srv://admin:root@cluster0.zydvlq3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
+    "myclient = pymongo.MongoClient(\"mongodb+srv://rishirkanchi:QxeAnSvizBC6VC1R@cluster0.cf3bg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\")\n",
     "mydb = myclient[\"ArxivData\"]\n",
     "mycol = mydb[\"embeddings\"]"
    ]
